--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-learning",
+  "name": "Tatarian kitchen",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,43 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@heroui/form": "^2.1.31",
+    "@heroui/input": "^2.4.32",
+    "@heroui/modal": "^2.2.28",
+    "@heroui/navbar": "^2.2.29",
+    "@heroui/react": "^2.8.9",
+    "@heroui/system": "^2.4.27",
+    "@heroui/theme": "^2.4.26",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
+    "@prisma/extension-accelerate": "^3.0.1",
+    "@types/dompurify": "^3.0.5",
+    "bcryptjs": "^3.0.3",
+    "dompurify": "^3.3.1",
+    "dotenv": "^17.3.1",
+    "framer-motion": "^12.34.0",
+    "html-react-parser": "^5.2.17",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
     "next": "16.1.6",
+    "next-auth": "^5.0.0-beta.30",
+    "pg": "^8.18.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
